[package]
name = "email-newsletter"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email-newsletter"

[dependencies]
actix-web = "4.12.1"
chrono = "0.4.42"
config = "0.11"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-async-std", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.19.0", features = ["v4"] }

[dev-dependencies]
reqwest = "0.13.1"
