[package]
name = "email-newsletter"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email-newsletter"

[dependencies]
actix-web = "4.12.1"
chrono = "0.4.42"
config = "0.11"
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-async-std", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.44", features = ["log"]}
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["registry", "env-filter"] }
tracing-actix-web = "0.5"
uuid = { version = "1.19.0", features = ["v4"] }
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "4.7.0"
unicode-segmentation = "1.12.0"
validator = "0.20.0"

[dev-dependencies]
claim = "0.5.0"
reqwest = "0.13.1"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
